[gd_scene load_steps=13 format=3 uid="uid://cgyyhw0vdjd53"]

[ext_resource type="Script" path="res://bunny.gd" id="1_tpkj6"]
[ext_resource type="Texture2D" uid="uid://djl2mb6meyw7" path="res://Bunny/bunny.png" id="2_3b2nk"]
[ext_resource type="Script" path="res://Bunny/Background.gd" id="3_bcvcw"]
[ext_resource type="Script" path="res://Bunny/WeaponMount.gd" id="5_glppa"]
[ext_resource type="PackedScene" uid="uid://c4fyn5g4dv6j3" path="res://UI/RadialMenu.tscn" id="5_wxxap"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_hpjx0"]
rough = true
bounce = 0.1

[sub_resource type="SpriteFrames" id="SpriteFrames_djd8a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3b2nk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6em3g"]
radius = 53.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_02cfc"]
bg_color = Color(0.827451, 0, 0.0235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68j8j"]
bg_color = Color(0.294118, 0.709804, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ocbhq"]
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_pe15y"]
radius = 220.0

[node name="Bunny" type="RigidBody2D"]
collision_layer = 2
mass = 3.0
physics_material_override = SubResource("PhysicsMaterial_hpjx0")
can_sleep = false
max_contacts_reported = 8
contact_monitor = true
script = ExtResource("1_tpkj6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -5)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_djd8a")
animation = &"idle"

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(3, -5)
shape = SubResource("CircleShape2D_6em3g")

[node name="BunnyOverhead" type="CanvasGroup" parent="."]
position = Vector2(3, -5)

[node name="OverheadBackground" type="Control" parent="BunnyOverhead"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="ColorRect" parent="BunnyOverhead/OverheadBackground"]
layout_mode = 0
offset_left = -72.0
offset_top = -111.0
offset_right = 69.0
offset_bottom = -62.0
color = Color(0, 0, 0, 0.2)
script = ExtResource("3_bcvcw")
inactive_color = Color(1, 1, 1, 0.2)
active_color = Color(0.8, 0, 0.423529, 1)

[node name="Right" type="ColorRect" parent="BunnyOverhead/OverheadBackground"]
layout_mode = 0
offset_left = 67.0
offset_top = -111.0
offset_right = 69.0
offset_bottom = -62.0

[node name="Left" type="ColorRect" parent="BunnyOverhead/OverheadBackground"]
layout_mode = 0
offset_left = -72.0
offset_top = -111.0
offset_right = -70.0
offset_bottom = -62.0

[node name="Top" type="ColorRect" parent="BunnyOverhead/OverheadBackground"]
layout_mode = 0
offset_left = -72.0
offset_top = -111.0
offset_right = 69.0
offset_bottom = -109.0

[node name="Bottom" type="ColorRect" parent="BunnyOverhead/OverheadBackground"]
layout_mode = 0
offset_left = -72.0
offset_top = -64.0
offset_right = 69.0
offset_bottom = -62.0

[node name="Health" type="ProgressBar" parent="BunnyOverhead"]
offset_left = -54.0
offset_top = -82.0
offset_right = 46.0
offset_bottom = -67.0
theme_override_styles/background = SubResource("StyleBoxFlat_02cfc")
theme_override_styles/fill = SubResource("StyleBoxFlat_68j8j")
step = 1.0
value = 100.0
show_percentage = false

[node name="Name" type="Label" parent="BunnyOverhead"]
offset_left = -70.0
offset_top = -107.0
offset_right = 62.0
offset_bottom = -84.0
text = "%BUNNYNAME%"
label_settings = SubResource("LabelSettings_ocbhq")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="WeaponMount" type="Sprite2D" parent="."]
position = Vector2(-1.99997, 11)
scale = Vector2(0.2, 0.2)
centered = false
offset = Vector2(0, -135)
script = ExtResource("5_glppa")

[node name="MeleeCollider" type="Area2D" parent="WeaponMount"]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponMount/MeleeCollider"]
position = Vector2(370, -55)
shape = SubResource("CircleShape2D_pe15y")

[node name="RadialMenu" parent="." instance=ExtResource("5_wxxap")]
